Bugfix e iniciada la coneccion a py
