# app/src/routes/user.js
@@ -1,65 +1,18 @@
 const express = require('express');
 const verifyIdToken =  require('../middlewares/firebase')
+const getUserByEmail = require('../middlewares/requestHandler')
+const ConnectionError = require('../errors/connectionError')
+const AuthError = require('../errors/authError')
 
 const router = express.Router();
 
-router.get('/:id', async function(req, res) {
-    // Verifica que el token de firebase sea valido
-    try {
-        const uid = await verifyIdToken(req.cookies.firebaseAuth)
-
-
-        // Pedir al back de python
-        const body = {
-            "first_name": "A name",
-            "last_name": "A lastname",
-            "email": "user@example.com",
-            "role": "role",
-            "is_admin": false,
-            "age": 25,
-            "subscription" :  "basic"
-        }
-        res.status(200).send(body)
-    } catch (e) {
-        let body = {}
-        if (e instanceof ConnectionError) {
-            body = {
-                error: e.name,
-                message: e.message
-            }
-            res.status(500).send(body)
-        } else if (e instanceof AuthError) {
-            body = {
-                error: e.name,
-                message: e.message
-            }
-            res.status(401).send(body)
-        } else {
-            body = {
-                error: e.name,
-                message: e.message
-            }
-            res.status(500).send(body)
-        }
-    }
-});
-
 router.get('/:email', async function(req, res) {
-    // Verifica que el token de firebase sea valido
     try {
         const uid = await verifyIdToken(req.cookies.firebaseAuth)
-
-
+        
         // Pedir al back de python
-        const body = {
-            "first_name": "A name",
-            "last_name": "A lastname",
-            "email": "user@example.com",
-            "role": "role",
-            "is_admin": false,
-            "age": 25,
-            "subscription" :  "basic"
-        }
+        const body = await getUserByEmail(req.params.email)
+
         res.status(200).send(body)
     } catch (e) {
         let body = {}
@@ -86,7 +39,6 @@ router.get('/:email', async function(req, res) {
 });
 
 router.post('/', async function(req, res) {
-    // Verificar request y mandar al back de python
     try {
         const uid = await verifyIdToken(req.cookies.firebaseAuth)
 
@@ -117,7 +69,7 @@ router.post('/', async function(req, res) {
     }
 });
 
-router.put('/:id', async function(req, res) {
+router.put('/', async function(req, res) {
     // Verificar request y mandar al back de python
     try {
         const uid = await verifyIdToken(req.cookies.firebaseAuth)
